Update bibliography with corrected arxiv link for co-occurrence network inference algorithm paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,8 @@
       title={Cross-Validation for Training and Testing Co-occurrence Network Inference Algorithms}, 
       author={Daniel Agyapong and Jeffrey Ryan Propster and Jane Marks and Toby Dylan Hocking},
       year={2023},
-      eprint={2309.15225},
-      archivePrefix={arXiv},
+      arxiv={2309.15225},
       primaryClass={cs.LG}
 }
+
+
