--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,23 @@
       author={Daniel Agyapong and Jeffrey Ryan Propster and Jane Marks and Toby Dylan Hocking},
       year={2023},
       arxiv={2309.15225},
-      primaryClass={cs.LG}
+      primaryClass={cs.LG},
+      note={Preprint version. Published in BMC Bioinformatics (2025)}
+}
+
+@article{agyapong2025cross,
+  title     = {Cross-validation for training and testing co-occurrence network inference algorithms},
+  author    = {Agyapong, Daniel and Propster, Jeffrey Ryan and Marks, Jane and Hocking, Toby Dylan},
+  journal   = {BMC Bioinformatics},
+  volume    = {26},
+  number    = {1},
+  pages     = {74},
+  year      = {2025},
+  publisher = {BioMed Central},
+  doi       = {10.1186/s12859-025-06083-7},
+  html      = {https://bmcbioinformatics.biomedcentral.com/articles/10.1186/s12859-025-06083-7},
+  selected  = {true},
+  abstract  = {Cross-validation is a fundamental technique for evaluating machine learning models, but its application to co-occurrence network inference algorithms presents unique challenges. This work presents a comprehensive framework for applying cross-validation methods to assess the performance of algorithms that infer associations between biological entities from co-occurrence data.}
 }
 
 
